--- a/style.css
+++ b/style.css
@@ -1,4 +1,111 @@
-html, body {
+html{
     padding: 0px;
     margin: 0px;
+    background-color: rgb(235, 232, 226);
+    font-family: monospace;
+    text-align: center;
 } 
+
+h1{
+    color: rgb(63, 100, 133);
+}
+
+svg{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.dots{
+    stroke: rgba(255, 255, 255, 0.865);
+    stroke-width: 1px;
+}
+
+.alert{
+    color: rgb(211, 96, 84);
+    margin-bottom: 0px;
+    margin-top: 5px;
+    visibility: hidden;
+}
+
+.domain{
+    visibility: hidden;
+}
+
+.tick text{
+    color: rgb(63, 100, 133);
+    font-family: monospace;
+    font-size: 14px;
+    font-weight: 800;
+    transform: translate(0, -10px);
+}
+
+.tick line{
+    color: rgb(255, 255, 255);
+}
+
+.annotation{
+    text-anchor: middle;
+    font-size: 12px;
+}
+
+#switch_label{
+    color: rgb(63, 100, 133);
+    font-size: 14px;
+}
+
+
+
+/*Creating Slider (reference: https://www.w3schools.com/howto/howto_css_switch.asp)*/
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 16px;
+}
+
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .3s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 14px;
+    width: 14px;
+    left: 2px;
+    right: 2px;
+    bottom: 1px;
+    background-color: white;
+    transition: .3s;
+}
+
+input:checked + .slider {
+    background-color: rgb(63, 100, 133);
+}
+
+input:checked + .slider:before {
+    transform: translateX(22px);
+}
+
+/* Rounded sliders */
+.slider.round:before {
+    border-radius: 50%;
+}
+
+.slider.round {
+    border-radius: 20px;
+}
